[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/ballBlue_09.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Art/Player.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.25, 29.2058 )

[node name="Player" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="cursor" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.0221138 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[node name="CheckAlive" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Player_body_exited"]
[connection signal="timeout" from="CheckAlive" to="." method="_on_CheckAlive_timeout"]
